--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "build": "cd client && npm run build",
     "start:prod": "cd server && npm start",
     "start:dev": "concurrently \"cd server && npm run watch\" \"cd client && npm start\"",
+    "heroku-postbuild": "cd client && npm run build"
   },
   "keywords": [],
   "author": "",
